2007-11-08  Timothy Wall  <twall@users.sf.net>

	* src/x86/ffitarget.h: Increase size of trampoline for stdcall
	closures. 
	* src/x86/win32.S: Add assembly for stdcall closure.
	* src/x86/ffi.c: Initialize stdcall closure trampoline.
	
2007-05-13  Release Manager

	* GCC 4.2.0 released.

2007-04-20  Richard Henderson  <rth@redhat.com>

	* configure.ac (alpha*-*-*): Define HAVE_LONG_DOUBLE.
	* configure: Regenerate.
	* include/ffi.h.in (ffi_type_longdouble): Define as ffi_type_double
	if HAVE_LONG_DOUBLE is false.
	* src/alpha/ffi.c (ffi_prep_cif_machdep): Support the 128-bit
	long double type.
	(ffi_call_osf, ffi_closure_osf): Likewise.
	* src/alpha/osf.S (ffi_call_osf, ffi_closure_osf): Mark hidden.
	* src/types.c (ffi_type_longdouble): For alpha, always generate
	for the 128-bit long double type.

2007-02-13  Andreas Krebbel  <krebbel1@de.ibm.com>

	* src/s390/ffi.c (ffi_prep_args, ffi_prep_cif_machdep,
	ffi_closure_helper_SYSV): Add long double handling.

2006-10-10  Paolo Bonzini  <bonzini@gnu.org>
	    Sandro Tolaini  <tolaini@libero.it>

	* configure.ac [i*86-*-darwin*]: Set X86_DARWIN symbol and 
	conditional.
	* configure: Regenerated.
	* Makefile.am (nodist_libffi_la_SOURCES) [X86_DARWIN]: New case.
	(EXTRA_DIST): Add src/x86/darwin.S.
	* Makefile.in: Regenerated.
	* include/Makefile.in: Regenerated.
	* testsuite/Makefile.in: Regenerated.

	* src/x86/ffi.c (ffi_prep_cif_machdep) [X86_DARWIN]: Treat like
	X86_WIN32, and additionally align stack to 16 bytes.
	* src/x86/darwin.S: New, based on sysv.S.
	* src/prep_cif.c (ffi_prep_cif) [X86_DARWIN]: Align > 8-byte structs.

2006-09-12  David Daney  <ddaney@avtrex.com>

	PR libffi/23935
	* include/Makefile.am: Install both ffi.h and ffitarget.h in
	$(libdir)/gcc/$(target_alias)/$(gcc_version)/include.
	* aclocal.m4: Regenerated for automake 1.9.6.
	* Makefile.in: Regenerated.
	* include/Makefile.in: Regenerated.
	* testsuite/Makefile.in: Regenerated.

2006-08-17  Andreas Tobler  <a.tobler@schweiz.ch>
